Fix: Filter buttons dropdown z-index

--- a/frontend/src/components/SearchBar/FilterButtons/DropDown.scss
+++ b/frontend/src/components/SearchBar/FilterButtons/DropDown.scss
@@ -5,7 +5,7 @@
 
   .dropdown {
     background-color: white;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     border-radius: 0px 0px 5px 5px;
